--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t seanmai/DockerDeployTest -f Dockerfile.dev .
+    - docker build -t seanmai/docker-deploy-test -f Dockerfile.dev .
 
 script:
-    - docker run seanmai/DockerDeployTest npm run test -- --coverage
+    - docker run seanmai/docker-deploy-test run test -- --coverage
