--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,6 @@ deploy:
     bucket_path: "docker-test"
     on:
         branch: master       # Only deploy on push to master
+    accesss_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+        secure:  "$AWS_SECRET_KEY"
