--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ deploy:
     bucket_path: "docker-test"
     on:
         branch: master       # Only deploy on push to master
-    accesss_key_id: "$AWS_ACCESS_KEY"
+    access_key_id: "$AWS_ACCESS_KEY"
     secret_access_key:
         secure:  "$AWS_SECRET_KEY"
